--- a/module_home/src/main/res/layout/activity_home.xml
+++ b/module_home/src/main/res/layout/activity_home.xml
@@ -35,4 +35,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_go_cart" />
 
+    <FrameLayout
+        android:id="@+id/fl_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_cart_product_count"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="#009999"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
